# PracticesCodingInterview

./: .gitignore  CMakeLists.txt  README.md  main.cpp
01_assignment_operator/: CMakeLists.txt  README.md  utest.cpp  (+1 more)
Chapter3/: CMakeLists.txt
Chapter3/16_power/: CMakeLists.txt  README.md  power.cpp  power.h  utest.cpp
Chapter3/17_print_1_to_max_of_n_digits/: CMakeLists.txt  README.md  print_1_to_max_of_n_digits.cpp  print_1_to_max_of_n_digits.h  utest.cpp
Chapter3/18_delete_node/: CMakeLists.txt  README.md  delete_node.cpp  delete_node.h  utest.cpp  utest.h
Chapter3/19_regular_expression_matching/: CMakeLists.txt  README.md  regular_expression_matching.cpp  regular_expression_matching.h  utest.cpp
Chapter3/20_numeric_string/: CMakeLists.txt  README.md  numeric_string.cpp  numeric_string.h  utest.cpp
Chapter3/21_reorder_array/: CMakeLists.txt  README.md  reorder_array.cpp  reorder_array.h  utest.cpp  utest.h
Chapter3/22_kth_node_from_end/: CMakeLists.txt  README.md  kth_node_from_end.cpp  kth_node_from_end.h  utest.cpp  utest.h
Chapter3/23_entry_node_list_loop/: CMakeLists.txt  README.md  entry_node_list_loop.cpp  entry_node_list_loop.h  utest.cpp
Chapter3/24_reverse_list/: CMakeLists.txt  README.md  reverse_list.cpp  reverse_list.h  utest.cpp  utest.h
Chapter3/25_merge_sorted_lists/: CMakeLists.txt  README.md  merge_sorted_lists.cpp  merge_sorted_lists.h  utest.cpp
Chapter3/26_substructure_in_tree/: CMakeLists.txt  README.md  substructure_in_tree.cpp  substructure_in_tree.h  utest.cpp  utest.h
Chapter4/: CMakeLists.txt
Chapter4/27_mirror_of_binary_tree/: CMakeLists.txt  README.md  mirror_of_binary_tree.cpp  mirror_of_binary_tree.h  utest.cpp  utest.h
Chapter4/28_symmetrical_binary_tree/: CMakeLists.txt  README.md  symmetrical_binary_tree.cpp  symmetrical_binary_tree.h  utest.cpp  utest.h
Chapter4/29_print_matrix/: CMakeLists.txt  README.md  print_matrix.cpp  print_matrix.h  utest.cpp
Chapter4/30_min_in_stack/: CMakeLists.txt  README.md  min_in_stack.h  utest.cpp
Chapter4/31_stack_push_pop_order/: CMakeLists.txt  README.md  stack_push_pop_order.cpp  stack_push_pop_order.h  utest.cpp
Chapter4/32_1_print_tree_from_top_to_bottom/: CMakeLists.txt  README.md  print_tree_from_top_to_bottom.cpp  utest.h
Chapter4/32_2_print_trees_in_lines/: CMakeLists.txt  README.md  print_trees_in_lines.cpp  print_trees_in_lines.h  utest.cpp  utest.h
Chapter4/32_3_print_tree_in_zigzag/: CMakeLists.txt  README.md  print_tree_in_zigzag.cpp  print_tree_in_zigzag.h  utest.cpp  utest.h
Chapter4/32_print_tree_from_top_to_bottom/: print_tree_from_top_to_bottom.h  utest.cpp
Chapter4/33_squence_of_bst/: CMakeLists.txt  README.md  squence_of_bst.cpp  squence_of_bst.h  utest.cpp
Chapter4/34_path_in_tree/: CMakeLists.txt  README.md  path_in_tree.cpp  path_in_tree.h  utest.cpp  utest.h
Chapter4/35_copy_complex_list/: CMakeLists.txt  README.md  copy_complex_list.cpp  copy_complex_list.h  utest.cpp
Chapter4/36_convert_binary_search_tree/: CMakeLists.txt  README.md  convert_binary_search_tree.cpp  convert_binary_search_tree.h  utest.cpp
Chapter4/37_serialize_binary_tree/: CMakeLists.txt  README.md  serialize_binary_tree.cpp  serialize_binary_tree.h  utest.cpp
Chapter4/38_string_permutation/: CMakeLists.txt  README.md  string_permutation.cpp  string_permutation.h  utest.cpp
Chapter5/: CMakeLists.txt
Chapter5/39_more_than_half_number/: CMakeLists.txt  README.md  more_than_half_number.cpp  more_than_half_number.h  utest.cpp
Chapter5/40_k_least_numbers/: CMakeLists.txt  README.md  k_least_numbers.cpp  k_least_numbers.h  utest.cpp
Chapter5/41_stream_median/: CMakeLists.txt  README.md  stream_median.cpp  stream_median.h  utest.cpp
Chapter5/42_greatest_sum_of_subarray/: CMakeLists.txt  README.md  greatest_sum_of_subarray.cpp  greatest_sum_of_subarray.h  utest.cpp
Chapter5/43_number_of_1/: CMakeLists.txt  README.md  number_of_1.cpp  number_of_1.h  utest.cpp
Chapter5/44_digits_in_sequence/: CMakeLists.txt  README.md  digits_in_sequence.cpp  digits_in_sequence.h  utest.cpp
Chapter5/45_sort_array_for_min_number/: CMakeLists.txt  README.md  sort_array_for_min_number.cpp  sort_array_for_min_number.h  utest.cpp
Chapter5/46_translate_number_to_strings/: CMakeLists.txt  README.md  translate_number_to_strings.cpp  translate_number_to_strings.h  utest.cpp
Chapter5/47_max_value_of_gifts/: CMakeLists.txt  README.md  max_value_of_gifts.cpp  max_value_of_gifts.h  utest.cpp
Chapter5/48_longest_substring_without_dup/: CMakeLists.txt  README.md  longest_substring_without_dup.cpp  longest_substring_without_dup.h  utest.cpp
Chapter5/49_ugly_number/: CMakeLists.txt  README.md  ugly_number.cpp  ugly_number.h  utest.cpp
Chapter5/50_1_first_not_repeating_char/: CMakeLists.txt  README.md  first_not_repeating_char.cpp  first_not_repeating_char.h  utest.cpp
Chapter5/50_2_first_charater_in_stream/: CMakeLists.txt  README.md  first_charater_in_stream.cpp  first_charater_in_stream.h  utest.cpp
Chapter5/51_inverse_pairs/: CMakeLists.txt  README.md  inverse_pairs.cpp  inverse_pairs.h  utest.cpp
Chapter5/52_first_common_nodes_in_lists/: CMakeLists.txt  README.md  first_common_nodes_in_lists.cpp  first_common_nodes_in_lists.h  utest.cpp  utest.h
Chapter6/: CMakeLists.txt
Chapter6/53_1_number_of_k/: CMakeLists.txt  README.md  number_of_k.cpp  number_of_k.h  utest.cpp
Chapter6/53_2_missing_number/: CMakeLists.txt  README.md  missing_number.cpp  missing_number.h  utest.cpp
Chapter6/53_3_integer_identical_to_index/: CMakeLists.txt  README.md  integer_identical_to_index.cpp  integer_identical_to_index.h  utest.cpp
Chapter6/54_kth_node_in_bst/: CMakeLists.txt  README.md  kth_node_in_bst.cpp  kth_node_in_bst.h  utest.cpp  utest.h
Chapter6/55_1_tree_depth/: CMakeLists.txt  README.md  tree_depth.cpp  tree_depth.h  utest.cpp
Chapter6/55_2_balanced_binary_tree/: CMakeLists.txt  README.md  balenced_binary_tree.cpp  balenced_binary_tree.h  utest.cpp  utest.h
Chapter6/56_1_numbers_appear_once/: CMakeLists.txt  numbers_appear_once.cpp  numbers_appear_once.h  utest.cpp
(+112 files in other folders)
