CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# PROJECT NAME
PROJECT(coding-interview-chapter-3)


# Sub directories
ADD_SUBDIRECTORY(16_power)
ADD_SUBDIRECTORY(17_print_1_to_max_of_n_digits)
ADD_SUBDIRECTORY(18_delete_node)
ADD_SUBDIRECTORY(19_regular_expression_matching)
ADD_SUBDIRECTORY(20_numeric_string)
ADD_SUBDIRECTORY(21_reorder_array)
ADD_SUBDIRECTORY(22_kth_node_from_end)
ADD_SUBDIRECTORY(23_entry_node_list_loop)
ADD_SUBDIRECTORY(24_reverse_list)
