CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# PROJECT NAME
PROJECT(coding-interview-chapter-4)


# Sub directories
ADD_SUBDIRECTORY(27_mirror_of_binary_tree)
ADD_SUBDIRECTORY(28_symmetrical_binary_tree)
ADD_SUBDIRECTORY(29_print_matrix)
ADD_SUBDIRECTORY(30_min_in_stack)
ADD_SUBDIRECTORY(31_stack_push_pop_order)
ADD_SUBDIRECTORY(32_1_print_tree_from_top_to_bottom)
ADD_SUBDIRECTORY(32_2_print_trees_in_lines)
ADD_SUBDIRECTORY(32_3_print_tree_in_zigzag)
