CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# PROJECT NAME
PROJECT(coding-interview-chapter-4)


# Sub directories
ADD_SUBDIRECTORY(27_mirror_of_binary_tree)
ADD_SUBDIRECTORY(28_symmetrical_binary_tree)
ADD_SUBDIRECTORY(29_print_matrix)
ADD_SUBDIRECTORY(30_min_in_stack)
ADD_SUBDIRECTORY(31_stack_push_pop_order)
ADD_SUBDIRECTORY(32_1_print_tree_from_top_to_bottom)
ADD_SUBDIRECTORY(32_2_print_trees_in_lines)
ADD_SUBDIRECTORY(32_3_print_tree_in_zigzag)
ADD_SUBDIRECTORY(33_squence_of_bst)
ADD_SUBDIRECTORY(34_path_in_tree)
ADD_SUBDIRECTORY(35_copy_complex_list)
ADD_SUBDIRECTORY(36_convert_binary_search_tree)
ADD_SUBDIRECTORY(37_serialize_binary_tree)
