CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# PROJECT NAME PROJECT(coding-interview-chapter-5)


# Sub directories
ADD_SUBDIRECTORY(39_more_than_half_number)
ADD_SUBDIRECTORY(40_k_least_numbers)
ADD_SUBDIRECTORY(41_stream_median)
ADD_SUBDIRECTORY(42_greatest_sum_of_subarray)
ADD_SUBDIRECTORY(43_number_of_1)
ADD_SUBDIRECTORY(44_digits_in_sequence)
ADD_SUBDIRECTORY(45_sort_array_for_min_number)
ADD_SUBDIRECTORY(46_translate_number_to_strings)
ADD_SUBDIRECTORY(47_max_value_of_gifts)
ADD_SUBDIRECTORY(48_longest_substring_without_dup)
ADD_SUBDIRECTORY(49_ugly_number)
ADD_SUBDIRECTORY(50_1_first_not_repeating_char)
ADD_SUBDIRECTORY(50_2_first_charater_in_stream)
ADD_SUBDIRECTORY(51_inverse_pairs)
