CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

#PROJECT NAME 
PROJECT(coding-interview-chapter-6)


# Sub directories
ADD_SUBDIRECTORY(53_1_number_of_k)
ADD_SUBDIRECTORY(53_2_missing_number)
ADD_SUBDIRECTORY(53_3_integer_identical_to_index)
ADD_SUBDIRECTORY(54_kth_node_in_bst)
ADD_SUBDIRECTORY(55_1_tree_depth)
ADD_SUBDIRECTORY(55_2_balanced_binary_tree)
