CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(reverse_list)
SET(DP_UNIT_TEST_SRC    ../../main.cpp
                        ../../utilities/List.cpp
                        reverse_list.cpp
                        utest.cpp)

FIND_PACKAGE(PkgConfig)
PKG_CHECK_MODULES(CPPUNIT REQUIRED cppunit)

INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIRS})
LINK_DIRECTORIES(${CPPUNIT_LIBRARY_DIRS})

ADD_EXECUTABLE(${PROJECT_NAME} ${DP_UNIT_TEST_SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${CPPUNIT_LIBRARIES})

ADD_TEST(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})

